完善dubbox route example

--- a/dubbox/pom.xml
+++ b/dubbox/pom.xml
@@ -30,6 +30,23 @@
                 <artifactId>dubbo</artifactId>
                 <version>${alibaba.dubbo.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.32.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>de.javakaffee</groupId>
+                <artifactId>kryo-serializers</artifactId>
+                <version>0.45</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.esotericsoftware</groupId>
+                <artifactId>kryo</artifactId>
+                <version>4.0.1</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 </project>
